# RobotPoseEkf

./: README.md
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/etc/catkin/profile.d/: 05.catkin-test-results.sh
devel/include/localization/: lla.h  lp.h  roboteq_msg.h
devel/lib/localization/: dummy  encoders  final_viz  gps  gps_viz  imu  oc_viz  odom_viz  position  position_viz  velocity  velocity_viz
devel/lib/pkgconfig/: localization.pc
devel/lib/python2.7/dist-packages/localization/msg/: __init__.py  _lla.py  _lp.py  _roboteq_msg.py
devel/share/common-lisp/ros/localization/msg/: _package.lisp  _package_lla.lisp  _package_lp.lisp  _package_roboteq_msg.lisp  lla.lisp  localization-msg.asd  lp.lisp  roboteq_msg.lisp
devel/share/localization/cmake/: localization-msg-paths.cmake  localizationConfig.cmake
src/localization/: CMakeLists.txt  CMakeLists.txt~  package.xml
src/localization/launch/: all.launch  create_bagfile.launch  create_bagfile.launch~  encoders.launch  encoders.launch~  gps.launch  imu.launch  imu.launch~  odom_testing.launch~  testing.launch  testing.launch~  testing2.launch  testing2.launch~  viz.launch  viz.launch~
src/localization/msg/: lp.msg~  vn100_msg.msg  vn200_msg.msg~  vn_msg.msg~
src/localization/src/: dummy.cpp  encoders.cpp  final_viz.cpp  gps.cpp  gps_viz.cpp  imu.cpp  odom_viz.cpp  position.cpp  vehicle_command.cpp  velocity.cpp
src/localization/src/Libraries/: RoboteqDevice.cpp  vn100.c  vncp_services.c
src/roboteq/: CMakeLists.txt  package.xml
src/roboteq/include/roboteq/: Constants.h  ErrorCodes.h  RoboteqDevice.h
src/roboteq/msg/: roboteq_msg.msg
src/roboteq/src/: channels.cpp  lane_follower2.cpp  obs_avoid.cpp  output_and_input.cpp  roboteq_interface_diff.cpp  system_model_diff.cpp  trajec_design.cpp  trajec_vel_planner.cpp
src/vectornav/: CMakeLists.txt  package.xml
src/vectornav/include/: GPSFix.h  GPSStatus.h
src/vectornav/launch/: a100.launch.html  big.launch.html  drivers.launch.html  first_it.launch.html  gmapping.launch.html  inside.launch.html  ip.launch.html  ipro.launch.html  line.launch.html  links.launch.html  lms100.launch.html  move_base.launch  movebase.launch.html  nav.launch.html  navigation.launch  new.launch.html  simplenav.launch.html  vn100.launch.html  withcamera.launch.html
src/vectornav/msg/: lla.msg  lp.msg  utmcoord.msg  vn200_msg.msg
src/vectornav/src/: utm.cpp  utm_difference.cpp  vn100_interface_diff.cpp  vn200_interface.cpp  vn3.cpp  vn7.cpp
src/vectornav/src/Libraries/: vn200.c
